--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ kotlinVersion=1.6.10
 kotlin.code.style=official
 
 kotlin.native.disableCompilerDaemon=true
+kotlin.native.binary.memoryModel=experimental
 
 webpackVersion=5.74.0
 webpackCliVersion=4.10.0
@@ -17,3 +18,6 @@ composeVersion=1.1.0
 
 android.useAndroidX=true
 agpVersion=7.0.2
+
+ktor_version=2.0.3
+logback_version=1.2.3
