--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.jvmargs=-Xmx4096m
 
-kotlinVersion=1.6.10
+kotlinVersion=1.7.0
 kotlin.code.style=official
 
 kotlin.native.disableCompilerDaemon=true
@@ -14,10 +14,10 @@ webpackCliVersion=4.10.0
 webpackDevServerVersion=4.8.0
 sourceMapLoaderVersion=4.0.0
 
-composeVersion=1.1.0
+composeVersion=1.2.0-alpha01-dev753
 
 android.useAndroidX=true
-agpVersion=7.0.2
+agpVersion=7.2.0
 
 ktor_version=2.0.3
 logback_version=1.2.3
