typesafe client/server configuration DSL

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ org.gradle.jvmargs=-Xmx4096m
 
 kotlinVersion=1.7.0
 kotlin.code.style=official
+serializationJsonVersion=1.4.0-RC
 
 kotlin.native.disableCompilerDaemon=true
 kotlin.native.binary.memoryModel=experimental
