Repair AndroidX Compose dependency resolution

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,9 +16,13 @@ webpackDevServerVersion=4.8.0
 sourceMapLoaderVersion=4.0.0
 
 composeVersion=1.2.0-alpha01-dev753
+composeCompilerVersion=1.2.0
+composeAndroidxVersion=1.2.0
 
 android.useAndroidX=true
 agpVersion=7.2.0
+appCompatVersion=1.5.0
+activityComposeVersion=1.5.1
 
 ktor_version=2.0.3
 logback_version=1.2.3
