--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.exawizards.multiplatform_template.android">
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
             android:allowBackup="false"
             android:supportsRtl="true"
