--- a/client/common/ktor-client/dsl/src/androidMain/AndroidManifest.xml
+++ b/client/common/ktor-client/dsl/src/androidMain/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.exawizards.multiplatform_template.server.ktor.configuration.client_utils"/>
+<manifest package="com.exawizards.multiplatform_template.ktor_client.dsl"/>
