--- a/common/configuration/src/androidMain/AndroidManifest.xml
+++ b/common/configuration/src/androidMain/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.exawizards.multiplatform_template.server.ktor.configuration"/>
+<manifest package="com.exawizards.multiplatform_template.configuration"/>
